fixed layout bugs

--- a/public/assets/styles/common/_global.scss
+++ b/public/assets/styles/common/_global.scss
@@ -89,7 +89,7 @@ body {
 
 section {
   margin : 0 !important;
-  margin-bottom : 16rem !important;
+  margin-bottom : 14rem !important;
 
   &:nth-child(2) {
     margin-bottom : 18rem;
