--- a/public/assets/styles/main.css
+++ b/public/assets/styles/main.css
@@ -81,7 +81,7 @@ body {
 
 section {
   margin: 0 !important;
-  margin-bottom: 16rem !important;
+  margin-bottom: 14rem !important;
 }
 
 section:nth-child(2) {
